@@ -9,6 +9,9 @@ Changes for Perl Application Development and Refactoring Environment
       which will cause an immediate crash at startup with a SQLite-related
       error message instead of a secondary error message complaining about
       missing Padre::DB classes (ADAMK)
+    - Moved Padre::HelpProvider::Perl to Padre::Document::Perl::Help to
+      prevent plugin classes from being scattered all over the namespace
+      tree (ADAMK)
 
 0.53 2009.12.23
     - Add initial version of a debugger using Debug::Client (SZABGAB)
